--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Blogajandro
 description: >- # this means to ignore newlines until "baseurl:"
   Bienvenue.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "blog.alejandro.me" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://blog.alejandro.me" # the base hostname & protocol for your site, e.g. http://example.com
 
 author:
   name: Alejandro Londono
