--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@
 
 title: Blogajandro
 description: >- # this means to ignore newlines until "baseurl:"
-  Bienvenue.
+  Thinking in public. More questions than answers.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://blog.alondono.me" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.alondono.me" # the base hostname & protocol for your site, e.g. http://example.com
 
 author:
   name: Alejandro Londono
