--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,12 @@ minima:
 paginate: 10
 google_analytics: G-3QRG4E1CQB
 
+header_pages:
+- blog.md
+- fiction.md
+- about.markdown
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
